# x64emu

./: Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: rust.yml
src/: device.rs  emulator.rs  hardware.rs  interface.rs  lib.rs  main.rs
src/bios/: Makefile  crt0.asm  startup.asm  utils.asm  utils.h
src/bios/include/: service.h  utils.h
src/bios/init/: Makefile  interrupt.c  vga.c
src/bios/service/: Makefile  bsv.asm  regs.h  video.c
src/device/: keymouse.rs  testdev.rs  testdma.rs  testtimer.rs  vga.rs
src/device/vga/: attribute.rs  crt.rs  dac.rs  general.rs  graphics.rs  sequencer.rs
src/emulator/: access.rs  hardware.rs  instruction.rs  interrupt.rs  processor.rs
src/emulator/access/: descriptor.rs  memory.rs  msr.rs  port.rs  register.rs
src/emulator/hardware/: memory.rs  processor.rs
src/emulator/hardware/processor/: descriptor.rs  general.rs  rflags.rs  segment.rs
src/emulator/instruction/: exec.rs  instr16.rs  instr32.rs  instrcmn.rs  opcode.rs  parse.rs
src/emulator/instruction/exec/: basic.rs  desc.rs  flag.rs  misc.rs  reg_mem.rs  regmem.rs  (+1 more)
src/emulator/processor/: general.rs  rflags.rs  segment.rs
src/hardware/: memory.rs  processor.rs
src/hardware/processor/: control.rs  descriptor.rs  general.rs  ip.rs  model_specific.rs  rflags.rs  segment.rs
src/interface/: gdbserver.rs  gdbserver_64.rs  gui.rs
tests/: bios  core.rs  switch_mode.rs
tests/kernel/: Makefile  ipl.asm
tests/kernel/mode/: init.c  startup.asm  switch.asm
tests/kernel/switch/: Makefile
tests/kernel/task/: Makefile  init.c  startup.asm
(+5 files in other folders)
