[package]
name = "x64emu"
version = "0.1.0"
authors = ["Yutaro Shimizu <simiyu@shift-crops.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
log = "0.4.14"
env_logger = "0.8.3"
num_enum = "0.5.1"
packed_struct = "0.5"
bitflags = "1.2.1"
num = "0.4.0"
paste = "1.0.5"
gdbstub = "0.4.5"
thiserror = "1.0.24"
